--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Fast Food</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="header_greetings">Hai Binarian</string>
-    <string name="header_asking">Mau makan apa hari ini?</string>
+    <string name="header_greetings">Hai Binarian,</string>
+    <string name="header_asking">Mau makan apa kamu hari ini?\n</string>
+    <string name="list_menu_makanan">List Menu Makanan</string>
 </resources>
