--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,11 @@
     <string name="string_lokasi">Lokasi\n</string>
     <string name="string_satu">1\n</string>
     <string name="string_beli">Beli</string>
-    <string name="string_hitung">Beli - Rp. %1d</string>
+    <string name="string_hitung">Beli - Rp.%1d</string>
     <string name="string_location">Jl. Terusan Hang Lekir II Blok Mushola No.28 A, RT.9/RW.6, Gunung, Kec. Kby. Baru, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12220</string>
+    <string name="bottom_nav_home">Home</string>
+    <string name="bottom_nav_keranjang">Keranjang</string>
+    <string name="bottom_nav_profile">Profile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
